# esp-idf-1.28-ball

./: .gitmodules  CMakeLists.txt  README.md  partitions_esp32s3.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s3
main/: CMakeLists.txt  application.cpp  application.h  idf_component.yml  main.cpp
main/AnimatedGIF/: AnimatedGIF.cpp
main/button/: button.cpp  button.h
main/configs/: config_app.h  config_pins.h  config_task.h
main/display/: display.cpp  display.h
main/gifplayer/: gifplayer.cpp  gifplayer.h
main/log_app/: log_app.cpp  log_app.h
main/preferences/: Preferences.cpp  Preferences.h  db.cpp  db.h
main/sdcard/: sdcard.cpp  sdcard.h
main/system/: system_info.cpp  system_info.h
main/utils/: lockguard.h  queue_app.cpp  queue_app.h  utils.cpp  utils.h
